# edges-estimate

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml  .travis.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  create_config.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_suite.yaml
devel/: hills_reproduction.ipynb  polychord_sampling_hills.yml  run_hills.py  toy_estimation.ipynb
devel/hills_likelihoods/: edges_nature_data_freqs_60plus.npy  edges_nature_data_tsky_60plus.npy  edges_nature_data_tsky_full.npy  linphys.yml  phys_broad.yml
devel/toy_model/: full.yaml  input.yaml
devel/toy_models/: high_band_data_off.npy  linpoly.yml  two-bands-all-separate-emcee.yml  two-bands-all-separate.yml  two-bands-share-p0-T-sigma-emcee.yml  two-bands-share-p0-T-sigma.yml  two-bands-share-p0-data-off-emcee.yml  two-bands-share-p0-data-off.yml  two-bands-share-p0-lin-sigma-emcee.yml  two-bands-share-p0-lin-sigma.yml  two-bands-share-p0.yml
docs/: conf.py
docs/tutorials/: getting_started.ipynb
docs/tutorials/chains/: emcee_example_config.yml  polychord_example.py_mcsamples  polychord_example.stats  polychord_example.txt  polychord_example_config.yml  polychord_example_dead-birth.txt  polychord_example_dead.txt  polychord_example_equal_weights.txt  polychord_example_phys_live-birth.txt  polychord_example_phys_live.txt  polychord_example_prior.txt
docs/tutorials/chains/clusters/: polychord_example_1.txt  polychord_example_1_equal_weights.txt  polychord_example_2.txt  polychord_example_2_equal_weights.txt  polychord_example_3.txt  polychord_example_3_equal_weights.txt  polychord_example_4.txt  polychord_example_4_equal_weights.txt  polychord_example_5.txt  polychord_example_5_equal_weights.txt  polychord_example_6.txt  polychord_example_6_equal_weights.txt  polychord_example_7.txt  polychord_example_7_equal_weights.txt  polychord_example_8_temp.txt  polychord_example_9_temp.txt  polychord_example_phys_live_1.txt  polychord_example_phys_live_2.txt  polychord_example_phys_live_3.txt
edges_estimate/: .pyproject.toml  __init__.py  calibration.py  cli.py  eor_models.py  fitting.py  foregrounds.py  generate.py  likelihoods.py  mcmc.py  plots.py
edges_estimate/mcmc_framework/: likelihood.py  util.py
integration_tests/: frequencies.npy  frequencies_high.npy
src/edges_estimate/: __init__.py  calibration.py  eor_models.py  fitting.py  foregrounds.py  likelihoods.py  plots.py
tests/: conftest.py  helpers.py  test_calibration.py  test_calibration_field.py  test_edges_estimate.py  test_foregrounds.py  test_partial_linear_model.py  test_plots.py  test_pure_calibration.py
tests/data/: test-calfile-12.h5  test-calfile.h5  test_calfile.h5
