# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = edges_estimate
description = Parameter Estimation for EDGES
author = EDGES Team
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/edges-collab/edges-estimate
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Natural Language :: English
    Intended Audience :: Developers
[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy
    scipy
    click>=6.0
    cached_property
    yabf

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install cal_coefficients[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
test =
    pytest
    pytest-cov
    pytest-cases
    pre-commit
docs =
    sphinx
    nbsphinx
    ipython
    sphinx_rtd_theme
dev =
    pytest
    pytest-cov
    pytest-cases
    pre-commit
    sphinx
    nbsphinx
    ipython
    sphinx_rtd_theme

[options.entry_points]
# console_scripts =
#    edges-cal = edges_cal.cli:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov edges_estimate --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
